--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>UnityCast TV</title>
     <link rel="stylesheet" type="text/css" href="styles/reset.css">
-    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="style/main.css"/>
+    <!-- <link rel="stylesheet" type="text/css" href="styles/main.css"> -->
       <!--[if lt IE 9]>
         <script src="javascripts/html5shiv/html5shiv.js"></script>
       <![endif]-->
@@ -13,6 +15,8 @@
 
     <body>
 
+      <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+      <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
     </body>
 
   </html>
