linked custom js and css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>UnityCast TV</title>
-    <link rel="stylesheet" type="text/css" href="styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/styles/reset.css"> <!-- may cause issues with bootstrap -->
     <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="style/main.css"/>
+    <link rel="stylesheet" href="assets/styles/main.css"/>
     <!-- <link rel="stylesheet" type="text/css" href="styles/main.css"> -->
       <!--[if lt IE 9]>
         <script src="javascripts/html5shiv/html5shiv.js"></script>
@@ -14,9 +14,15 @@
     </head>
 
     <body>
+      <div class="container-fluid">
+        <div class="container">
+
+        </div> <!-- end container -->
+      </div> <!-- end container-fluid -->
 
       <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
       <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+      <script src="assets/javascript/main.js"></script>
     </body>
 
   </html>
