add streamerbox div with displayTable id

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <body>
       <div class="container-fluid">
         <div class="container">
-
+          <div class="streamerBox" id="displayTable">
+          </div>
         </div> <!-- end container -->
       </div> <!-- end container-fluid -->
 
