got sidebar and video wall added to undex.html

--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
     <body>
       <div class="container-fluid">
         <div class="container">
-          <div class="streamerBox" id="displayTable">
+          <div class="streamerBox col-md-3" id="displayTable">
           </div>
+          <div class="liveStreamers" id="streams"></div>
         </div> <!-- end container -->
       </div> <!-- end container-fluid -->
 
       <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
       <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
       <script src="assets/javascript/main.js"></script>
+      <script src="CheckOnline.js"></script>
+
+
     </body>
 
   </html>
