attempt to fix layout when it hits min-width: 992px

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
           <div class="streamerBox col-md-3" id="displayTable">
           </div>
-          <div class="liveStreamers" id="streams"></div>
+          <div class="liveStreamers col-md-7" id="streams"></div>
         </div> <!-- end container -->
       </div> <!-- end container-fluid -->
 
