--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
     <body>
       <div class="container-fluid">
         <div class="container">
-          <div class="streamerBox col-md-3" id="displayTable">
-          </div>
-          <div class="liveStreamers col-md-7" id="streams"></div>
+          <!-- <h1 id="head">Countdown to my birthday:</h1> -->
+          <ul>
+            <li><span id="days"></span>days</li>
+            <li><span id="hours"></span>Hours</li>
+            <li><span id="minutes"></span>Minutes</li>
+            <li><span id="seconds"></span>Seconds</li>
+          </ul>
         </div> <!-- end container -->
       </div> <!-- end container-fluid -->
 
